# systemd-tui

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  ui.rs
