[package]
name = "systemd-tui"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2021"
rust-version = "1.61.0"
description = "Monitor systemd services in a TUI."
documentation = "https://github.com/Xithrius/systemd-tui"
homepage = "https://github.com/Xithrius/systemd-tui"
repository = "https://github.com/Xithrius/systemd-tui"
license = "MIT OR Apache-2.0"
keywords = ["tui", "systemd"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.26.1"
tui = { package = "ratatui", version = "0.22.0", default-features = false, features = [ "crossterm", "serde" ] }
serde = { version = "1.0.152", features = [ "derive" ] }
toml = "0.8.2"
color-eyre = "0.6.1"

[profile.dev.package.backtrace]
opt-level = 3

[[bin]]
bench = false
path = "src/main.rs"
name = "sui"

[profile.release]
lto = "thin"
